<resources>
    <string name="app_name">Tasks</string>
    <string name="add_task">addTask</string>
    <string name="title">Title of task</string>
    <string name="enter_a_title_for_the_task">Enter a title for the task</string>
    <string name="details">Details of task</string>
    <string name="enter_a_details_for_the_task">Enter a details for the task</string>
    <string name="task_deadline">Task deadline</string>
    <string name="change_date">Change date</string>
    <string name="change_time">Change time</string>
    <string name="task_solved">Task solved</string>
    <string name="at">at</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete this item?</string>
    <string name="save">Save</string>
    <string name="hide_solved">Hide solved tasks</string>
    <string name="un_hide_solved">Show all tasks</string>
    <string name="sorted_by_deadline">Sorted list by deadline</string>
    <string name="sorted_by_creation_date">Sorted by creation date</string>
    <string name="all_tasks">All tasks</string>
    <string name="red_priority">Red priority</string>
    <string name="green_priority">Green priority</string>
    <string name="yellow_priority">Yellow priority</string>
    <string name="change_priority">Change priority</string>

</resources>
